welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: ';' expected but 'true' found.
  if ((a>=13 && a<=19)||(b>=13 && b<=19))==true {
                                           ^